[gd_scene load_steps=2 format=3 uid="uid://4288psv8yhbx"]

[ext_resource type="Script" path="res://addons/zylann.scatter/tools/palette.gd" id="1"]

[node name="Palette" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1" )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1024.0
offset_bottom = 31.0

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_right = 52.0
offset_bottom = 31.0
text = "Add..."

[node name="RemoveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 56.0
offset_right = 127.0
offset_bottom = 31.0
text = "Remove"

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
offset_top = 35.0
offset_right = 1024.0
offset_bottom = 565.0
size_flags_vertical = 3
select_mode = 1

[node name="MarginContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 569.0
offset_right = 1024.0
offset_bottom = 600.0

[node name="MarginLabel" type="Label" parent="VBoxContainer/MarginContainer"]
offset_top = 2.0
offset_right = 510.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Object margin:"

[node name="MarginSpinBox" type="SpinBox" parent="VBoxContainer/MarginContainer"]
offset_left = 514.0
offset_right = 1024.0
offset_bottom = 31.0
size_flags_horizontal = 3
max_value = 10.0
step = 0.01
allow_greater = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="multi_selected" from="VBoxContainer/ItemList" to="." method="_on_ItemList_multi_selected"]
